--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,34 @@
 * {
   box-sizing: border-box;
 }
+
+@font-face {
+    font-family: 'main-font';
+    src: url('fonts/HelveticaNeueHeavy.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'main-font';
+  font-size: clamp(24px, 5vw, 100px);
+  margin: 0;
+}
+
+main {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+}
